--- a/src/index.css
+++ b/src/index.css
@@ -290,6 +290,10 @@
 }
 
 /* =====================> countDown-container  <================= */
+.countDown-container {
+  padding: 10px 0px 100px 0px;
+}
+
 .count-box {
   text-align: left;
 }
@@ -305,4 +309,72 @@
   color: #14c88c;
   font-size: 18px;
   font-weight: 500;
+}
+
+/* ==============> Role conditions  <================= */
+.role-container {
+  background-image: url("/roleshape.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+  padding-top: 100px;
+  overflow: hidden;
+}
+.main-box {
+  display: flex;
+  align-items: center;
+}
+
+.role-container .main-box .role-left-box {
+  width: 50%;
+}
+.role-container .main-box .role-left-box .button-title {
+  color: white;
+  background: #2682f9;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  padding: 4px 15px;
+  margin-bottom: 10px;
+}
+.role-container .main-box .role-left-box .role-title {
+  color: #262d3d;
+  font-size: 42px;
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+.role-container .main-box .role-left-box .becom-box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+.role-container .main-box .role-left-box .becom-box .description {
+  color: rgba(128, 128, 128, 0.744);
+}
+.role-container .main-box .role-left-box img {
+  width: 50px;
+}
+
+.role-container .main-box .role-left-box .work-button {
+  text-decoration: underline;
+  font-weight: 400;
+  margin-left: 20px;
+}
+
+.role-container .main-box .role-right-box {
+  position: relative;
+  width: 50%;
+  display: flex;
+  gap: 20px;
+}
+.role-container .main-box .role-right-box .middle-role-img {
+  position: absolute;
+  top: 50%;
+  left: 60%;
+  z-index: 10;
+  transform: translate(-50%, -50%);
+}
+.role-container .main-box .role-right-box .middle-role-img2 {
+  margin-top: 70px;
 }
