--- a/src/index.css
+++ b/src/index.css
@@ -528,11 +528,25 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 40px;
+  /* gap: 40px; */
 }
 
-.footer-section {
-  flex: 1 1 200px;
+/* .footer-section {
+  flex: 100px 100px 100px 200px;
+} */
+
+.footer-top .footer-left,
+.footer-right {
+  display: flex;
+}
+.footer-top .footer-left {
+  width: 50%;
+  gap: 30px;
+}
+.footer-top .footer-right {
+  width: 50%;
+  justify-content: space-between;
+  padding-left: 20px;
 }
 
 .footer-section h3 {
@@ -547,16 +561,17 @@
 }
 
 .footer-section ul li {
-  margin-bottom: 10px;
-  color: #cbd5e1;
+  margin-bottom: 20px;
+  color: #a3aab3;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .video-thumbnail {
   position: relative;
   border-radius: 10px;
   overflow: hidden;
-  max-width: 250px;
+  max-width: 340px;
 }
 
 .video-thumbnail img {
@@ -564,15 +579,20 @@
   display: block;
 }
 
-.play-button {
+.play-button2 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: white;
-  color: #1e2a45;
+  color: #2682f9;
   border-radius: 50%;
-  padding: 10px 14px;
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: bold;
   font-size: 18px;
   cursor: pointer;
@@ -586,45 +606,57 @@
   margin: 0 0 10px;
 }
 
-.icons a {
+.icons .social-icon-box {
   margin-right: 15px;
   color: white;
   font-size: 1.2rem;
   transition: color 0.3s;
+  padding: 7px 10px;
+  border-radius: 100%;
 }
 
-.icons a:hover {
-  color: #38bdf8;
+.icons .social-icon-box:hover {
+  background: #14c88c;
+}
+
+.social .fa-x-twitter {
+  color: #14c88c;
 }
 
 .news .news-item {
   display: flex;
   gap: 15px;
   margin-bottom: 20px;
+  align-items: center;
 }
 
 .news .news-item img {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   border-radius: 10px;
   object-fit: cover;
 }
 
 .news .news-item h4 {
-  margin: 5px 0 0;
-  font-size: 0.95rem;
+  /* margin: 5px 0 0; */
+  font-size: 16px;
+  font-weight: 500;
   color: white;
+  line-height: 28px;
 }
 
 .news .news-item p {
   font-size: 0.8rem;
   color: #94a3b8;
 }
+.news .news-item .fa-comments {
+  color: #14c88c;
+}
 
 .footer-bottom {
-  margin-top: 40px;
+  margin-top: 70px;
   border-top: 1px solid #334155;
-  padding-top: 20px;
+  padding: 20px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
