--- a/src/index.css
+++ b/src/index.css
@@ -507,7 +507,63 @@
   }
 }
 
-/* ====================\> Foter <================ */
+/* ============= Footer top conttact <================ */
+.contact-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #2388fa;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+  padding: 40px;
+  gap: 50px;
+}
+
+.contact-box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.icon-circel-box {
+  border: 1px solid #dcdcdc42;
+  padding: 10px;
+  border-radius: 100%;
+}
+
+.icon-circle {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-circle img {
+  width: 20px;
+  height: 20px;
+  filter: invert(34%) sepia(100%) saturate(643%) hue-rotate(184deg)
+    brightness(102%) contrast(102%);
+}
+
+.contact-info h4 {
+  margin: 0;
+  color: #cbd5e1;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.contact-info p {
+  margin: 4px 0 0 0;
+  font-size: 1.2rem;
+  color: white;
+  font-weight: bold;
+}
+
+/* ===============> Footer bootem <=============== */
 .footer-container {
   background-image: url("/bg-footer.png");
   background-color: #1e2744;
@@ -562,7 +618,7 @@
 
 .footer-section ul li {
   margin-bottom: 20px;
-  color: #a3aab3;
+  color: #ccd4dff5;
   cursor: pointer;
   font-size: 16px;
 }
@@ -571,7 +627,7 @@
   position: relative;
   border-radius: 10px;
   overflow: hidden;
-  max-width: 340px;
+  width: 340px;
 }
 
 .video-thumbnail img {
@@ -677,14 +733,50 @@
 }
 
 @media (max-width: 768px) {
+  /* =========> Footer top <========== */
+  .contact-container {
+    display: block;
+    padding: 20px 10px 0 10px;
+    margin: 15px;
+  }
+  .contact-box {
+    padding-bottom: 30px;
+  }
+
+  /* =======> Footer bottom <========== */
+  .footer {
+    padding: 30px 0px 0px 0px;
+  }
   .footer-top {
-    flex-direction: column;
+    display: block;
+    padding: 15px;
+  }
+
+  .footer-top .footer-left,
+  .footer-top .footer-right {
+    display: block;
+    width: 100%;
+  }
+
+  .footer-top .footer-left .footer-section .video-thumbnail {
+    width: 100%;
+    border: 3px soli rebeccapurple;
+  }
+  .footer-section {
+    margin-top: 20px;
+  }
+
+  .footer-top .footer-right {
+    padding-left: 0;
   }
 
   .footer-bottom {
-    flex-direction: column;
-    gap: 10px;
-    text-align: center;
+    margin-top: 20px;
+    padding: 20px 15px;
+  }
+
+  .footer-bottom p {
+    font-size: 20px;
   }
 
   .footer-links {
@@ -694,54 +786,4 @@
   .footer-links a {
     margin: 0 10px;
   }
-}
-
-/* ============= Footer conttact <================ */
-.contact-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #2388fa;
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-  padding: 40px;
-  gap: 50px;
-}
-
-.contact-box {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.icon-circle {
-  width: 50px;
-  height: 50px;
-  background-color: white;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.icon-circle img {
-  width: 28px;
-  height: 28px;
-  filter: invert(34%) sepia(100%) saturate(643%) hue-rotate(184deg)
-    brightness(102%) contrast(102%);
-}
-
-.contact-info h4 {
-  margin: 0;
-  color: #cbd5e1;
-  font-weight: 600;
-  font-size: 1rem;
-}
-
-.contact-info p {
-  margin: 4px 0 0 0;
-  font-size: 1.2rem;
-  color: white;
-  font-weight: bold;
 }
