--- a/src/index.css
+++ b/src/index.css
@@ -455,18 +455,19 @@
   gap: 20px;
   margin-bottom: 30px;
 }
-
+.features .feature-box {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.features .feature-box .fa-circle-check {
+  color: #10b981;
+}
 .features span {
   display: flex;
   align-items: center;
   color: #1e293b;
   font-weight: 500;
-}
-
-.features span::before {
-  content: "✔";
-  color: #10b981;
-  margin-right: 8px;
 }
 
 .subscribe {
@@ -498,6 +499,22 @@
 }
 
 @media (max-width: 768px) {
+  .notifiction-container {
+    display: block;
+    margin: 15px;
+    border-radius: 10px;
+  }
+
+  .notifiction-container .right {
+    padding: 30px 20px;
+  }
+  .notifiction-container .right h1 {
+    font-size: 28px;
+  }
+
+  .features {
+    padding: 10px 0;
+  }
   .container {
     flex-direction: column;
     padding: 20px;
@@ -586,10 +603,6 @@
   justify-content: space-between;
   /* gap: 40px; */
 }
-
-/* .footer-section {
-  flex: 100px 100px 100px 200px;
-} */
 
 .footer-top .footer-left,
 .footer-right {
