--- a/src/index.css
+++ b/src/index.css
@@ -665,6 +665,7 @@
   font-weight: bold;
   font-size: 18px;
   cursor: pointer;
+  animation: pulse 1.5s infinite;
 }
 
 .social {
@@ -743,6 +744,18 @@
 
 .footer-links a:hover {
   color: #38bdf8;
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(239, 235, 235, 0.7);
+  }
+  70% {
+    box-shadow: 0 0 0 20px rgba(255, 60, 60, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 60, 60, 0);
+  }
 }
 
 @media (max-width: 768px) {
