--- a/src/index.css
+++ b/src/index.css
@@ -379,6 +379,38 @@
   margin-top: 70px;
 }
 
+@media (max-width: 768px) {
+  .role-container .main-box {
+    display: block;
+    padding: 15px;
+  }
+  .role-container .main-box .role-left-box {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  .role-container .main-box .role-right-box {
+    width: 100%;
+  }
+  .role-container .main-box .role-right-box .frist-img img {
+    width: 200px;
+  }
+  .role-container .main-box .role-right-box .middle-role-img2 {
+    margin-top: 35px;
+  }
+  .role-container .main-box .role-right-box .middle-role-img2 img {
+    width: 163px;
+  }
+  .role-container .main-box .role-right-box .middle-role-img img {
+    width: 125px;
+  }
+  .role-container .main-box .role-left-box .role-title {
+    font-size: 28px;
+  }
+  .br-class {
+    display: none;
+  }
+}
+
 /* ==============> Cart container <================= */
 .cart-container {
   margin-top: 120px;
@@ -521,6 +553,9 @@
   }
   .right {
     padding: 20px 0;
+  }
+  .cart-container {
+    margin: 60px 0px;
   }
 }
 
